<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">206797474097291</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb206797474097291</string>
    <string name="google_maps_key" translatable="false">AIzaSyBmCJMG_N3OzEfA9tE2jlKp2NRmKtwpT-8</string>

    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="place_name_tool">Place Name</string>
    <string name="address_tool">123 Main Street, San Francisco, CA USA</string>
    <string name="search_hint">Search</string>
    <string name="open_now">Open Now</string>
    <string name="close">Close</string>
    <string name="notification_message">Today you lucnh with %1$s in the restaurant %2$s where is in %3$s. Have a good lunch !</string>
    <string name="notification_solo">"Today you lunch in the restaurant %1$s where is in %2$s. Have a good lunch ! "</string>
    <string name="notification_title">Go for lunch !!</string>
    <string name="is_joining">%1$s is joining</string>
    <string name="lunch_in">%1$s lunch in %2$s</string>
    <string name="call">CALL</string>
    <string name="permission_message">This application need your location to found some restaurants around you.</string>
    <string name="not_yet">%1$s hasn\'t decided yet.</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="map_view">Map view</string>
    <string name="list_view">List view</string>
    <string name="workmates">Workmates</string>
    <string name="no_restaurant">"You are not choose a restaurant yet. "</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_ratio">Sort by ratio</string>
    <string name="sort_by_headcount">Sort by headcount</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="permission_denied">Location permission denied.</string>
    <string name="google_signin_fail">Sign In with Google failed.</string>
    <string name="facebook_cancel">Operation canceled</string>
    <string name="facebook_error">Connexion error</string>
    <string name="number_luncher" translatable="false">(%1$s)</string>
    <string name="distance" translatable="false">%1$sm</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="sort">Sort</string>
    <string name="available_workmates">Available workmates</string>
    <string name="hungry">I\'m Hungry !</string>
</resources>
