<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="detailViewModel"
            type="com.example.goforlunch.viewmodel.DetailViewModel" />

        <variable
            name="detailActivity"
            type="com.example.goforlunch.activity.DetailActivity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_restaurant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5sp"
                        android:layout_marginBottom="3dp"
                        android:text="@{detailViewModel.placeObservable.name}"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <RatingBar
                        android:id="@+id/ratio"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                </LinearLayout>

                <TextView
                    android:id="@+id/detail_restaurant_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{detailViewModel.placeObservable.address}"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/detail_call_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:drawableTop="@drawable/ic_baseline_call_24"
                    android:onClick="@{() -> detailActivity.callOnClickListener()}"
                    android:text="@string/call" />

                <Button
                    android:id="@+id/detail_like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:onClick="@{() -> detailActivity.likeOnClickListener()}"
                    android:text="@string/like" />

                <Button
                    android:id="@+id/detail_website_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:drawableTop="@drawable/ic_baseline_public_24"
                    android:onClick="@{() -> detailActivity.webOnClickListener()}"
                    android:text="@string/website" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_luncher_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@android:color/white"
            android:onClick="@{() -> detailActivity.addOnclicklistener()}"
            android:src="@{detailViewModel.isLunch ? @drawable/ic_baseline_check_circle_24 : @drawable/ic_baseline_add_circle_24}"
            app:layout_anchor="@+id/detail_imageview"
            app:layout_anchorGravity="bottom|right|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>